[gd_scene load_steps=23 format=3 uid="uid://2g8u3su8jh3l"]

[ext_resource type="Script" path="res://Resources/enemy.gd" id="1_7o8jv"]
[ext_resource type="Texture2D" uid="uid://c473ayjdldkib" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_special_death/E/skeleton_special_death_E_0.0_0.png" id="2_6rfct"]
[ext_resource type="Texture2D" uid="uid://bpjxjcs0ktoys" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_special_death/E/skeleton_special_death_E_0.0_1.png" id="3_lruq7"]
[ext_resource type="Texture2D" uid="uid://4e1soyswifrd" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_default_walk/E/skeleton_default_walk_E_0.0_0.png" id="4_c55p8"]
[ext_resource type="Texture2D" uid="uid://bpj4pqd81mj5i" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_special_death/E/skeleton_special_death_E_0.0_2.png" id="4_d0gxy"]
[ext_resource type="Texture2D" uid="uid://ba6lbxyk6gcn4" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_special_death/E/skeleton_special_death_E_0.0_3.png" id="5_ddq7m"]
[ext_resource type="Texture2D" uid="uid://yyxyvwyt3r4k" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_default_walk/E/skeleton_default_walk_E_0.0_1.png" id="5_w2tuj"]
[ext_resource type="Texture2D" uid="uid://di6qgeit6cjex" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_default_walk/E/skeleton_default_walk_E_0.0_2.png" id="6_devn5"]
[ext_resource type="Texture2D" uid="uid://yr3mt4plh1em" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_special_death/E/skeleton_special_death_E_0.0_4.png" id="6_rqe71"]
[ext_resource type="Texture2D" uid="uid://dwrlm8e5700g4" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_special_death/E/skeleton_special_death_E_0.0_5.png" id="7_bmei1"]
[ext_resource type="Texture2D" uid="uid://ch1gxvxd5grc7" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_default_walk/E/skeleton_default_walk_E_0.0_3.png" id="7_klurw"]
[ext_resource type="Texture2D" uid="uid://ch1x86bbb5rwg" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_default_walk/E/skeleton_default_walk_E_0.0_4.png" id="8_7k4kj"]
[ext_resource type="Texture2D" uid="uid://c2diaa05ht8ir" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_default_walk/E/skeleton_default_walk_E_0.0_5.png" id="9_iud4d"]
[ext_resource type="Texture2D" uid="uid://bvinb031iae41" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_default_walk/E/skeleton_default_walk_E_0.0_6.png" id="10_xp174"]
[ext_resource type="Texture2D" uid="uid://1n3yxhb1hxtk" path="res://Lords Of Pain - Old School Isometric Assets/enemy/skeleton/skeleton_default_walk/E/skeleton_default_walk_E_0.0_7.png" id="11_y8gsn"]
[ext_resource type="PackedScene" uid="uid://dsxtql4g4yorq" path="res://Resources/hurtbox.tscn" id="16_cf0xx"]
[ext_resource type="PackedScene" uid="uid://drpei0uj8d8x4" path="res://Resources/hitbox.tscn" id="17_gfbpf"]
[ext_resource type="AudioStream" uid="uid://crcoluyyhhy3" path="res://Sounds/enemy_hurt.mp3" id="18_nl4mg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wj1l7"]
radius = 24.0

[sub_resource type="SpriteFrames" id="SpriteFrames_wstes"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6rfct")
}, {
"duration": 1.0,
"texture": ExtResource("3_lruq7")
}, {
"duration": 1.0,
"texture": ExtResource("4_d0gxy")
}, {
"duration": 1.0,
"texture": ExtResource("5_ddq7m")
}, {
"duration": 1.0,
"texture": ExtResource("6_rqe71")
}, {
"duration": 1.0,
"texture": ExtResource("7_bmei1")
}],
"loop": true,
"name": &"hurt",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c55p8")
}, {
"duration": 1.0,
"texture": ExtResource("5_w2tuj")
}, {
"duration": 1.0,
"texture": ExtResource("6_devn5")
}, {
"duration": 1.0,
"texture": ExtResource("7_klurw")
}, {
"duration": 1.0,
"texture": ExtResource("8_7k4kj")
}, {
"duration": 1.0,
"texture": ExtResource("9_iud4d")
}, {
"duration": 1.0,
"texture": ExtResource("10_xp174")
}, {
"duration": 1.0,
"texture": ExtResource("11_y8gsn")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6y48a"]
radius = 15.0
height = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_q8hds"]
radius = 15.0333

[node name="Enemy2" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 2
z_as_relative = false
y_sort_enabled = true
collision_layer = 4
collision_mask = 7
script = ExtResource("1_7o8jv")
experience = 1

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wj1l7")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-9, 4)
scale = Vector2(2.73438, 2.73438)
sprite_frames = SubResource("SpriteFrames_wstes")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.918126

[node name="Hurtbox" parent="." instance=ExtResource("16_cf0xx")]
collision_layer = 4
collision_mask = 4
HurtboxType = 1

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6y48a")

[node name="DisableTimer" parent="Hurtbox" index="1"]
one_shot = false

[node name="Hitbox" parent="." instance=ExtResource("17_gfbpf")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_q8hds")

[node name="EnemyHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_nl4mg")
volume_db = -32.917
pitch_scale = 1.33
max_polyphony = 8

[node name="EnemyHurtTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="enemy_death" from="." to="." method="_on_enemy_death"]
[connection signal="enemy_hurt" from="." to="." method="_on_enemy_hurt"]
[connection signal="remove_from_array" from="." to="." method="_on_remove_from_array"]
[connection signal="xp_spawn" from="." to="." method="_on_xp_spawn"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="EnemyHurtTimer" to="." method="_on_enemy_hurt_timer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
